# spectrum

./: .gitignore  Cargo.toml  quickstart.md  readme.md  spectrum-asns.txt
.github/workflows/: release.yml
client-tests/: capture-packets.sh  run-tests.sh  test-all.sh
research/: dpi-vendors.sh  find-spectrum-asns.sh  legal-history.sh  network-practices.sh  run-all.sh  search-complaints.sh  spectrum-ranges.sh
research-results/: complaints-20251208-202131.txt  dpi-vendors-20251208-202131.txt  legal-history-20251208-202131.txt  network-practices-20251208-200126.txt  page-e29b2c7c947541113f9d89ca326ad862.html  spectrum-asns-20251208-202131.txt  spectrum-ranges-20251208-200118.txt  spectrum-ranges-20251208-200438.txt  spectrum-ranges-20251208-201942.txt  summary.md
server-analysis/: analyze-logs.sh  cloudflare-stats.sh
src/: main.rs
web/: diagnostic.html  report-collector.js
