[package]
name = "spectrum"
version = "0.1.0"
edition = "2024"
description = "Cross-platform diagnostic tool for detecting Spectrum/Charter SSL interception"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
reqwest = { version = "0.12.25", default-features = false, features = ["rustls-tls", "json"] }
rustls = { version = "0.23.35", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
socket2 = "0.6.1"
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.26.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webpki-roots = "1.0.4"
chrono = { version = "0.4", features = ["serde"] }
